# gemma-4-chat-harness

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/: CLAUDE.md  SETTINGS.md  runner.py  settings.json
.claude/DONE/2026-07/example-task/: LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/githooks/: pre-commit
.claude/hooks/: enforce_matrix.py
.claude/scripts/: ci_check.py
.claude/skills/Engineer/: SKILLS.md
.claude/skills/Executor/: SKILLS.md
.claude/skills/Planner/: SKILLS.md
.claude/skills/Validator/: SKILLS.md
.claude/tasks/DONE/2026-07/2026-07-04-connect-chat-rest/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-env-orchestrator-db-url/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-error-http-status/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-fix-mcp-421-allowed-hosts/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-fix-mcp-421-disable-rebinding/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-fix-mcp-421-host-validation/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-gemma-nvidia-llm/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-image-analyzer-gemma/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-langgraph-thread-memory/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-langsmith-tracing/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-llm-request-timeout/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-llm-timeout-budgets/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-llm-timeouts/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-no-mock-file-upload-e2e/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-persist-thread-localstorage/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-planner-prompt-braces/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-remove-mock-llm/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-reset-chat-delete-thread/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-single-file-limit/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-subagent-args-double-wrap/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-subagent-call-logging/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-subagent-stdio-env/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  TASK.md  VALIDATION.md
.claude/tasks/DONE/2026-07/2026-07-05-typewriter-effect/: EXEC.md  LOG.md  PLAN.md  STATE.yaml  (+2 more)
.claude/tasks/example-task/: EXEC.md
.github/workflows/: harness-gate.yml
backend/: CLAUDE.md
backend/_common/env/: settings.py
backend/gateway/routers/: chat.py
backend/gateway/schemas/: __init__.py  chat.py
backend/gateway/services/: __init__.py  agent_client.py  chat_service.py  orchestrator_client.py
backend/tests/: test_chat_thread.py  test_uploads.py
frontend/: jest.config.mjs  package.json  pnpm-lock.yaml
frontend/__tests__/: chatService.test.ts  chatStore.test.ts  page.test.tsx
frontend/app/: README.md  layout.tsx  page.tsx
frontend/services/: README.md  chatService.ts
frontend/shared/features/: README.md
frontend/shared/features/chat/: ChatView.tsx
frontend/shared/ui-kit/: HeaderButton.tsx  MessageBubble.tsx  MessageInput.tsx  README.md  useTypewriter.ts
frontend/stores/: README.md  chatStore.ts
frontend/types/: README.md  chat.d.ts
mcp/: .env.example  CLAUDE.md  Dockerfile  README.md
mcp/agent_core/: __init__.py  files.py  llm.py  pyproject.toml
mcp/doc_analyzer/: config.py  pyproject.toml
mcp/doc_analyzer/prompts/: analyze.py
mcp/doc_analyzer/schemas/: document.py  http.py
mcp/doc_analyzer/services/: analyze_service.py
mcp/doc_analyzer/tools/: doc_tools.py  providers.py
mcp/image_analyzer/: config.py  main.py  pyproject.toml
mcp/image_analyzer/prompts/: vision.py
mcp/image_analyzer/schemas/: http.py  image.py
mcp/image_analyzer/services/: analyze_image.py
mcp/image_analyzer/tools/: analyze_image.py  image_tools.py  providers.py
mcp/master_orchestrator/: __init__.py  config.py  main.py  pyproject.toml
mcp/master_orchestrator/db/: __init__.py  checkpointer.py
mcp/master_orchestrator/prompts/: generator.py  orchestrate.py
mcp/master_orchestrator/schemas/: http.py
mcp/master_orchestrator/services/: files.py  http_server.py  memory.py  orchestrator.py  subagents.py
mcp/master_orchestrator/tools/: delete_thread.py  orchestrate_tools.py  planner.py  start_job.py  subagent_client.py
mcp/scripts/: news_check.py  tools_check.py
mcp/web_agent/: config.py  main.py  pyproject.toml
mcp/web_agent/prompts/: generate.py
mcp/web_agent/providers/: __init__.py  tavily.py
mcp/web_agent/schemas/: http.py
mcp/web_agent/tools/: providers.py  search_web.py  web_tools.py
(+162 files in other folders)
