[project]
name = "master-orchestrator"
version = "0.1.0"
description = "Gemma tool-calling orchestrator over the sub-agent MCP servers."
requires-python = ">=3.11"
dependencies = [
    "agent-core",
    "fastmcp>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    # AsyncPostgresSaver talks to Postgres via psycopg 3. The `[binary]` extra
    # bundles libpq inside the wheel so it works on python:3.11-slim without an
    # apt libpq5 layer; without it psycopg finds no pq wrapper and memory boot
    # fails ("no pq wrapper available ... libpq library not found").
    "psycopg[binary]>=3.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
master-orchestrator = "master_orchestrator.main:main"

[tool.uv.sources]
agent-core = { path = "../agent_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
