[project]
name = "web-agent"
version = "0.1.0"
description = "web_agent MCP server — live internet data (news, weather, page fetch)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "agent-core>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0"]

[project.scripts]
web-agent = "web_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Flat layout: this pyproject.toml lives inside the package dir (mcp/web_agent/),
# so map the directory contents to the "web_agent" import package in the wheel.
[tool.hatch.build.targets.wheel]
only-include = ["."]
sources = { "." = "web_agent" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
